--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.7.9",
     "formidable": "^3.5.2",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
