--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "formidable": "^3.5.2",
     "moment": "^2.30.1",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
