--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "formidable": "^3.5.2",
     "moment": "^2.30.1",
     "next": "15.1.7",
+    "nextjs-progressbar": "^0.0.16",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5"
